fix: alias 에러로 인해 styled-system alias 삭제

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@styled-system/*": ["./styled-system/*"]
+      "@/*": ["./src/*"]
+      // "@styled-system/*": ["./styled-system/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
