chore: github actions 워크플로우 Export 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Export
+        run: yarn export
+
       - name: Deploy to Netlify
         uses: netlify/actions/cli@v2
         with:
