--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: yarn build
 
       - name: Deploy to Netlify
-        uses: netlify/actions/cli@v1
+        uses: netlify/actions/cli@latest
         with:
           publish-dir: out
           production-deploy: ${{ github.ref == 'refs/heads/main' }}
