--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,7 @@ jobs:
         run: yarn build
 
       - name: Deploy to Netlify
-        uses: netlify/actions/cli@latest
-        with:
-          publish-dir: out
-          production-deploy: ${{ github.ref == 'refs/heads/main' }}
+        run: npx netlify-cli deploy --prod --dir=out
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ github.ref == 'refs/heads/main' && secrets.NETLIFY_PROD_SITE_ID || secrets.NETLIFY_DEV_SITE_ID }}
